# Pico-Guitar-Pedal

./: README.md
Pico/: CMakeLists.txt  dma_capture.c
Python/: audio_data.csv  csv_wav.py  recorder.py  stream.py  stream_two.py
